# robocup-home-education-rosqui

./: README.md  mates
find_my_mates/: CMakeLists.txt  package.xml
find_my_mates/behavior_trees_xml/: find_my_mates.xml
find_my_mates/include/find_my_mates/: AnalyzePerson.h  Analyze_person.h  BTNavAction.h  Dialog.h  DialogInterface.h  GoToArena.h  GoToPerson.h  GoToRef.h  Go_to_arena.h  Go_to_person.h  Go_to_referee.h  SayDescription.h  Say_the_description.h  Start.h  nav_node.h
find_my_mates/src/: find_my_mates_node.cpp
find_my_mates/src/find_my_mates/: AnalyzePerson.cpp  Analyze_person.cpp  DialogInterface.cpp  GoToArena.cpp  GoToPerson.cpp  GoToRef.cpp  Go_to_arena.cpp  Go_to_person.cpp  Go_to_referee.cpp  SayDescription.cpp  Say_the_description.cpp  Start.cpp  nav_node.cpp
luggage/: CMakeLists.txt  package.xml
luggage/behavior_trees_xml/: luggage.xml
luggage/include/luggage/: BumpGo_Base.h  DetectLuggage.h  Dialog.h  DialogInterface.h  FollowPerson.h  GoToBag.h  GoToOrigin.h  GoToRef.h  Lost.h  Navigation.h  NearGo.h  PIDController.h  PercievePerson.h  Start.h  Turn.h  nav_node.h
luggage/launch/: luggage.launch
luggage/src/: PIDController.cpp  cv.cpp  luggage_node.cpp
luggage/src/luggage/: DetectLuggage.cpp  DialogInterface.cpp  FollowPerson.cpp  GoToBag.cpp  GoToOrigin.cpp  GoToRef.cpp  Lost.cpp  Navigation.cpp  NearGo.cpp  PercievePerson.cpp  Start.cpp  Turn.cpp  exampleDF.cpp  nav_node.cpp
